Fix spacing issue

--- a/assets/css/block.css
+++ b/assets/css/block.css
@@ -9,7 +9,7 @@
   width: 100%;
   gap: var(--space-l, 24px);
   background-color: var(--color-purple-600);
-  padding: var(--space-l, 24px);
+  padding: var(--space-300, 24px);
   flex:1
 }
 
@@ -75,8 +75,8 @@
   background-color: var(--color-navy-900);
   display: flex;
   flex-direction: column;
-  padding: var(--space-300, 24px);
-  gap: var(--space-100, 8px);
+  padding: var(--space-400, 32px);
+  gap: var(--space-300, 24px);
   z-index: 1;
   position: relative;
 }
